--- a/03.04-State-Exam.MD
+++ b/03.04-State-Exam.MD
@@ -174,6 +174,72 @@ B) Terraform merges the state with `default`
 C) Terraform only removes the state reference, not the actual resources  
 D) It resets all variables  
 
+### 🧠 **Advanced Terraform State & Workspaces – Questions**
+
+31. What happens if you remove a resource from your configuration and apply it in all workspaces?
+A) Only the current workspace will be affected  
+B) All state files will merge  
+C) The resource will be removed from all workspaces  
+D) Terraform ignores removed resources  
+
+32. When using an S3 backend with workspaces, how does Terraform typically organize the state files?
+A) Flat structure with no folders  
+B) One state file shared across all workspaces  
+C) Separate folders named after each workspace  
+D) All state files are in DynamoDB  
+
+33. What does `terraform state lock` do?
+A) Locks the codebase from changes  
+B) Manually locks the state file to prevent concurrent applies  
+C) Encrypts the state file  
+D) Deletes the state file  
+
+34. Which command should be used instead of editing the state file manually?
+A) `terraform edit state`  
+B) `terraform update`  
+C) `terraform state` subcommands  
+D) `terraform plan`  
+
+35. What’s a potential danger of not using remote state locking?
+A) Resources will be encrypted by default  
+B) Providers will not initialize correctly  
+C) Concurrent applies can corrupt the state file  
+D) Outputs will not be available  
+
+36. Which of the following is **not** isolated by workspaces?
+A) The Terraform state file  
+B) The Terraform configuration  
+C) The resource lifecycle metadata  
+D) The plan execution for each environment  
+
+37. You are using workspaces and delete a workspace that has previously deployed resources. What happens?
+A) Resources are destroyed  
+B) Resources remain, but Terraform forgets about them  
+C) Terraform merges the state with `default`  
+D) The backend automatically retains resource data  
+
+38. Which of the following would best help manage secrets securely in multiple environments?
+A) Rely only on workspaces  
+B) Commit secrets to `.tf` files  
+C) Use a secret manager or separate `tfvars` files per environment  
+D) Use `terraform.workspace` to hide secrets  
+
+39. Why might workspaces alone not be ideal for environments with significantly different infrastructure?
+A) They support only AWS  
+B) They cannot manage outputs  
+C) Workspaces do not isolate configuration  
+D) Workspaces disable encryption  
+
+40. When planning for team use of Terraform, why should you avoid using only local state?
+A) Local state is automatically encrypted  
+B) Teams can only use local state with Terraform Cloud  
+C) There's no locking, collaboration, or version history with local state  
+D) Local state speeds up terraform apply, which may cause throttling  
+
+---
+
+### ✅ **Answers with Explanations**
+
 | **#** | **Answer** | **Reasoning** |
 |------:|:----------:|-------------------------------------------------------------------------------------------------------------------------------------|
 | 1     | B          | Terraform state files track metadata, dependencies, and current status of resources, allowing Terraform to manage infrastructure properly. |
@@ -206,3 +272,13 @@ D) It resets all variables
 | 28    | A (True)   | If infrastructure is *very* different, use separate workspaces or even separate codebases. |
 | 29    | C          | Use `${terraform.workspace}` to reference the active workspace in your configuration. |
 | 30    | C          | Deleting a workspace removes its state file, but does **not** destroy the actual cloud resources. |
+| 31     | C          | Removing a resource in config and applying across all workspaces will remove it from all associated state files. |
+| 32     | C          | With S3 and workspaces, each workspace typically has its own folder in the key path. |
+| 33     | B          | `terraform state lock` (when supported) prevents concurrent applies that could corrupt the state file. |
+| 34     | C          | Always use `terraform state` subcommands (e.g., `mv`, `rm`, `show`) instead of editing state manually. |
+| 35     | C          | Without locking (e.g., via DynamoDB), multiple users might apply at once and corrupt the state. |
+| 36     | B          | Configuration is shared across all workspaces unless conditionally managed via `locals` or variables. |
+| 37     | B          | Deleting a workspace removes Terraform’s tracking, but cloud resources will remain unless explicitly destroyed. |
+| 38     | C          | Workspaces don’t manage secrets; external secret managers or separate files per environment are best practice. |
+| 39     | C          | Since config is shared, large infra differences can make workspace usage complex or unsafe—use separate stacks instead. |
+| 40    | C          | Local state is fine for single-user dev, but doesn’t support locking, collaboration, or history needed in teams. |
