--- a/04.03-Variables-Exam.MD
+++ b/04.03-Variables-Exam.MD
@@ -200,6 +200,68 @@
     D) To specify the resources to be destroyed  
 
 
+31. **Which of the following is the correct way to define a map with string keys and boolean values in Terraform?**  
+   A) `map(bool)`  
+   B) `map(string, bool)`  
+   C) `map({key = string, value = bool})`  
+   D) `map([string, bool])`
+
+32. **What is the default behavior of a `list` in Terraform?**  
+   A) It stores a collection of key-value pairs in order  
+   B) It only allows unique values  
+   C) It stores elements in an ordered sequence  
+   D) It is unordered and allows duplicate values
+
+33. **What is the key difference between a `tuple` and a `list` in Terraform?**  
+   A) Tuples can only contain one type of data, while lists can contain multiple types.  
+   B) Tuples are ordered collections of elements with fixed types, while lists are ordered collections of any type.  
+   C) Lists can only contain one type of data, while tuples can contain multiple types.  
+   D) Tuples are unordered, while lists are ordered.
+
+34. **Which of the following types can be used to define a variable for a set of subnets in Terraform?**  
+   A) `set(string)`  
+   B) `tuple([string])`  
+   C) `map(string)`  
+   D) `list(string)`
+
+35. **Which of the following would be the most appropriate use of an object type in Terraform?**  
+   A) To define a dynamic list of values  
+   B) To pass around complex configuration data with multiple attributes  
+   C) To define a simple string-based variable  
+   D) To store a collection of items where order matters
+
+36. **What is the correct way to validate that a string variable in Terraform has a minimum length of 8 characters?**  
+   A) `condition = length(var.password) >= 8`  
+   B) `condition = var.password.length >= 8`  
+   C) `condition = var.password >= 8`  
+   D) `condition = var.password.length() >= 8`
+
+37. **How can you pass values between different Terraform modules?**  
+   A) Using output variables from one module and input variables in another module  
+   B) By referencing resources directly between modules  
+   C) Using state files to pass variables  
+   D) By using the `terraform_remote_state` data source
+
+38. **What is the default type of a variable if no `type` is specified in the variable block in Terraform?**  
+   A) `string`  
+   B) `list(string)`  
+   C) `any`  
+   D) `object`
+
+39. **How can you specify that a variable can take either a string or a number value in Terraform?**  
+   A) `type = string | number`  
+   B) `type = any`  
+   C) `type = tuple([string, number])`  
+   D) `type = object({value = string | number})`
+
+40. **Which of the following actions can Terraform perform when using `terraform validate`?**  
+   A) Validate the correctness of the syntax and structure of the Terraform files without making any changes to the infrastructure.  
+   B) Validate the inputs to the variables and confirm the configuration works with the current state.  
+   C) Automatically apply the changes to the infrastructure to match the configuration.  
+   D) Verify if the resources in the configuration exist in the cloud environment.
+
+---
+
 | #  | Question Topic                | Correct Answer | Explanation (Optional Notes)                                          |
 |----|-------------------------------|----------------|------------------------------------------------------------------------|
 | 1  | Variable Type for Password    | A) string       | Passwords are stored as text.                                         |
@@ -209,7 +271,7 @@
 | 5  | Type for AZ List              | A) list(string) | List of string items.                                                 |
 | 6  | Description Purpose           | B) User-readable explanation     | Helps describe variable purpose.                                      |
 | 7  | Define List of Strings        | B) ["item1", "item2"] | Correct HCL syntax.                                                   |
-| 8  | Set of Unique Regions         | A) set(string)  | `set()` stores unique, unordered strings.                             |
+| 8  | Set of Unique Regions         | A) set(string)  | set() stores unique, unordered strings.                             |
 | 9  | Unordered, Unique Collection  | C) set          | Only sets are unordered and unique.                                   |
 | 10 | Tuple Type Matching           | C) One string followed by one number | Tuples enforce strict type and order.                                 |
 | 11 | Sensitive Variable Behavior   | B) Hides value from logs/outputs | Still stored in state but hidden from console.                        |
@@ -218,7 +280,7 @@
 | 14 | Purpose of Validation Condition | B) Ensures valid value        | Enforces constraints.                                                 |
 | 15 | Use Case of Validation Block  | B) Restrict value ranges         | Example: validating port numbers.                                     |
 | 16 | Validation Failure Behavior   | C) Stop and display error        | Terraform won't proceed.                                              |
-| 17 | Invalid Validation Condition  | B) `var.email matches`...        | `matches` is not valid syntax.                                        |
+| 17 | Invalid Validation Condition  | B) var.email matches...        | matches is not valid syntax.                                        |
 | 18 | Valid Error Message           | C) "Port must be between 1024 and 65535" | Descriptive and appropriate.                                          |
 | 19 | NOT a Complex Type            | C) string       | It’s a primitive type.                                                |
 | 20 | Key Trait of map              | B) Key-value pairs               | Like dictionaries.                                                    |
@@ -230,5 +292,15 @@
 | 26 | Non-sensitive Output Example  | B) output "instance_ip" ...      | Public IP is not sensitive by default.                                |
 | 27 | View Outputs Command          | C) terraform output              | Shows current output values.                                          |
 | 28 | Reference Output in Other Config | A) terraform_remote_state data source | Allows reuse of values from another state.                            |
-| 29 | Meaning of Output Block       | B) Returns public IP             | `value` points to a resource attribute.                               |
+| 29 | Meaning of Output Block       | B) Returns public IP             | value points to a resource attribute.                               |
 | 30 | Use of Output in Module       | B) Pass values outside the module | Makes internal values available to callers.                           |
+| 31 | Map Definition Syntax         | B) map(string, bool)            | Defines a map with string keys and boolean values.                     |
+| 32 | Default List Behavior         | D) It is unordered and allows duplicate values | Lists in Terraform allow duplicate items and maintain order.          |
+| 33 | Tuple vs List                 | B) Tuples are ordered collections of elements with fixed types, while lists are ordered collections of any type. | Tuples enforce strict order and types, lists don't.                   |
+| 34 | Passing Data Between Modules  | A) Using output variables from one module and input variables in another | Output from one module can be passed as input to another module.     |
+| 35 | Default Variable Type         | C) any                          | If no type is specified, Terraform assumes the variable type is `any`. |
+| 36 | Allow Multiple Variable Types | B) type = any                   | The `any` type allows multiple types, such as string or number.       |
+| 37 | `terraform validate` Command   | A) Validate the correctness of the syntax and structure of the Terraform files without making any changes to the infrastructure. | This command checks for syntax errors but does not modify infrastructure. |
+| 38 | Validation Syntax for Min Length | A) condition = length(var.password) >= 8 | Validates that the string meets minimum length requirements.         |
+| 39 | Valid Variable Definition     | A) string, B) number, C) bool    | Valid types for defining variables in Terraform.                      |
+| 40 | Correct Syntax for a Map      | B) map(number)                  | Correct way to define a map with number values.                       |
