--- a/04.03-Variables-Exam.MD
+++ b/04.03-Variables-Exam.MD
@@ -199,6 +199,9 @@
     C) To define which resources will be created in the module  
     D) To specify the resources to be destroyed  
 
+---
+
+### **Advanced**
 
 31. **Which of the following is the correct way to define a map with string keys and boolean values in Terraform?**  
    A) `map(bool)`  
