--- a/04.03-Variables-Exam.MD
+++ b/04.03-Variables-Exam.MD
@@ -297,13 +297,13 @@
 | 28 | Reference Output in Other Config | A) terraform_remote_state data source | Allows reuse of values from another state.                            |
 | 29 | Meaning of Output Block       | B) Returns public IP             | value points to a resource attribute.                               |
 | 30 | Use of Output in Module       | B) Pass values outside the module | Makes internal values available to callers.                           |
-| 31 | Map Definition Syntax         | B) map(string, bool)            | Defines a map with string keys and boolean values.                     |
-| 32 | Default List Behavior         | D) It is unordered and allows duplicate values | Lists in Terraform allow duplicate items and maintain order.          |
-| 33 | Tuple vs List                 | B) Tuples are ordered collections of elements with fixed types, while lists are ordered collections of any type. | Tuples enforce strict order and types, lists don't.                   |
-| 34 | Passing Data Between Modules  | A) Using output variables from one module and input variables in another | Output from one module can be passed as input to another module.     |
-| 35 | Default Variable Type         | C) any                          | If no type is specified, Terraform assumes the variable type is `any`. |
-| 36 | Allow Multiple Variable Types | B) type = any                   | The `any` type allows multiple types, such as string or number.       |
-| 37 | `terraform validate` Command   | A) Validate the correctness of the syntax and structure of the Terraform files without making any changes to the infrastructure. | This command checks for syntax errors but does not modify infrastructure. |
-| 38 | Validation Syntax for Min Length | A) condition = length(var.password) >= 8 | Validates that the string meets minimum length requirements.         |
-| 39 | Valid Variable Definition     | A) string, B) number, C) bool    | Valid types for defining variables in Terraform.                      |
-| 40 | Correct Syntax for a Map      | B) map(number)                  | Correct way to define a map with number values.                       |
+| 31 | Correct Map Definition        | B) map(string, bool) | The correct syntax for a map with string keys and boolean values is `map(string, bool)`. |
+| 32 | Default List Behavior         | D) It is unordered and allows duplicate values | A list in Terraform is ordered but allows duplicate values and does not guarantee uniqueness. |
+| 33 | Tuple vs List                 | B) Tuples are ordered collections of elements with fixed types, while lists are ordered collections of any type. | Tuples have a fixed order and fixed types for each element, while lists allow any type. |
+| 34 | Set for Subnets               | A) set(string)  | A set in Terraform is an unordered collection of unique values. `set(string)` is used for unique subnet identifiers. |
+| 35 | Use Case for Object Type      | B) To pass around complex configuration data with multiple attributes | The object type is ideal for defining a complex structure with different key-value pairs. |
+| 36 | String Variable Length Validation | A) condition = length(var.password) >= 8 | Use the `length()` function in a validation block to check that the string is at least 8 characters long. |
+| 37 | Passing Values Between Modules | A) Using output variables from one module and input variables in another | To pass values between modules, use outputs in one module and pass them as inputs in another. |
+| 38 | Default Type for a Variable   | C) any          | If no type is specified, Terraform defaults to `any`, allowing the variable to accept any type. |
+| 39 | Allow Multiple Variable Types | B) type = any   | Specifying `type = any` allows the variable to accept multiple types, like string or number. |
+| 40 | `terraform validate` Command  | A) Validate the correctness of the syntax and structure of the Terraform files without making any changes to the infrastructure. | `terraform validate` checks the syntax and structure of your Terraform files but doesn’t modify infrastructure. |
