--- a/05.01-Provisioners.MD
+++ b/05.01-Provisioners.MD
@@ -1,10 +1,10 @@
-## ✅ Terraform Provisioners
+# ✅ Terraform Provisioners
 
 Provisioners in Terraform are used to **execute scripts or commands** on a local or remote system **after a resource is created or destroyed**. They're useful for bootstrapping configurations that **can't be easily handled with Terraform's declarative language**—such as installing software or modifying system files directly.
 
 ---
 
-### ⚠️ Important Notes
+## ⚠️ Important Notes
 - **Use provisioners as a last resort** – they break Terraform’s declarative model and introduce imperative behavior.
 - Provisioners are **not idempotent**—Terraform can't track or rollback what they do.
 - If a provisioner fails (e.g., script exits with non-zero), the associated resource is **marked as tainted**, and will be recreated on the next apply.
@@ -17,10 +17,10 @@ To use a **remote-exec** provisioner, you need to define a `connection` block to
 
 ```hcl
 connection {
-  type     = "ssh"
-  user     = "ubuntu"
+  type        = "ssh"
+  user        = "ubuntu"
   private_key = file("~/.ssh/id_rsa")
-  host     = self.public_ip
+  host        = self.public_ip
 }
 ```
 
@@ -30,13 +30,7 @@ connection {
 
 ### 1. 🛰️ Remote Exec Provisioner
 
-Runs **commands or scripts on the remote machine** after it has been provisioned. This is useful for:
-- Installing software
-- Configuring system settings
-- Starting services
-- Running post-deploy configuration scripts
-
-#### Example: Install and Start Nginx on EC2
+Runs **commands or scripts on the remote machine** after it has been provisioned.
 
 ```hcl
 resource "aws_instance" "web" {
@@ -60,40 +54,16 @@ resource "aws_instance" "web" {
 }
 ```
 
-#### Example: Run a Script
-
-```hcl
-provisioner "remote-exec" {
-  script = "scripts/configure_server.sh"
-}
-```
-
 ---
 
 ### 2. 🖥️ Local Exec Provisioner
 
-Runs a **command on the machine where Terraform is executed**. This is helpful for:
-- Triggering CI/CD scripts
-- Notifying external systems (e.g., via `curl`)
-- Creating files
-- Running Ansible or external scripts after apply
-
-#### Example: Echo a Message
+Runs a **command on the machine where Terraform is executed**.
 
 ```hcl
 resource "null_resource" "local" {
   provisioner "local-exec" {
     command = "echo 'Provisioning complete!'"
-  }
-}
-```
-
-#### Example: Trigger Ansible Playbook
-
-```hcl
-resource "null_resource" "ansible_deploy" {
-  provisioner "local-exec" {
-    command = "ansible-playbook -i '${aws_instance.web.public_ip},' playbook.yml"
   }
 }
 ```
@@ -127,7 +97,6 @@ Avoid provisioners when:
 If a provisioner returns a non-zero exit status:
 - Terraform will **mark the resource as tainted**, meaning it will be **destroyed and recreated** in the next apply.
 
-Example of an error scenario:
 ```bash
 Error: remote-exec provisioner error
 │ Error running command 'bad-command': exit status 127
@@ -135,9 +104,24 @@ Error: remote-exec provisioner error
 
 ---
 
+## ✅ Summary
+
+| Provisioner Type | Executes On            | Common Use Cases                        |
+|------------------|------------------------|-----------------------------------------|
+| `remote-exec`    | Remote machine (e.g., EC2) | Install software, start services     |
+| `local-exec`     | Local machine (Terraform host) | Notify APIs, run Ansible, custom scripts |
+
+---
+
+# 🚀 Advanced: Provisioners (Beyond the Exam)
+
+These aren’t critical for the Terraform Associate exam, but deepen your real-world Terraform skills.
+
+---
+
 ## 🧱 Chaining Multiple Provisioners
 
-You can use multiple provisioners inside a resource:
+You can define multiple provisioners in one resource. They run **in the order they appear**:
 
 ```hcl
 provisioner "remote-exec" {
@@ -151,9 +135,20 @@ provisioner "remote-exec" {
 
 ---
 
-## ✅ Summary
+## 🔄 Destroy-Time Provisioners
 
-| Provisioner Type | Executes On | Common Use Cases |
-|------------------|-------------|------------------|
-| `remote-exec`    | Remote machine (e.g., EC2) | Install software, start services |
-| `local-exec`     | Local machine (Terraform host) | Notify APIs, run Ansible, custom local scripts |
+You can run provisioners during **resource destruction** with `when = destroy`:
+
+```hcl
+provisioner "remote-exec" {
+  when   = destroy
+  inline = ["echo 'Cleaning up before destruction'"]
+}
+```
+
+---
+
+## 🧠 Execution Phase
+
+- Provisioners only run during the **create** and **destroy** lifecycle phases.
+- They **do not run during a plan** or during changes that do not recreate the resource.
