--- a/05.02-Provisioners-Exam.MD
+++ b/05.02-Provisioners-Exam.MD
@@ -196,35 +196,41 @@ B) `terraform state`
 C) `terraform apply -auto-approve`  
 D) `TF_LOG=DEBUG terraform apply`  
 
-| #  | Question (Topic)                         | Answer | Explanation |
-|----|------------------------------------------|--------|-------------|
-| 1  | Purpose of provisioners                  | B      | Provisioners are used to run custom scripts or commands **after** resource creation. |
-| 2  | When to use provisioners                 | B      | Provisioners are a **last resort**, used when Terraform can't perform an action natively. |
-| 3  | Non-zero return code                     | B      | A non-zero exit code causes the resource to be **tainted**, meaning it will be destroyed and recreated on next apply. |
-| 4  | Executes on local machine                | B      | `local-exec` runs the command **locally**, where Terraform is being executed. |
-| 5  | Executes on remote machine               | C      | `remote-exec` runs commands **on the provisioned resource**, like an EC2 instance. |
-| 6  | Needed for remote-exec                   | C      | To connect remotely, Terraform needs **connection info** like SSH details or WinRM. |
-| 7  | SSH connection block                     | B      | The `connection` block specifies **how Terraform connects** to the remote machine. |
-| 8  | Purpose of `inline`                      | B      | The `inline` argument lets you pass a **list of commands** to run remotely in order. |
-| 9  | Running a shell script locally           | C      | You can use `local-exec` to run **any shell script** or CLI tool. |
-| 10 | Invalid provisioner type                 | D      | `cloud-exec` is **not a valid provisioner**. Only `local-exec` and `remote-exec` are. |
-| 11 | Why last resort                          | B      | Provisioners are not tracked by Terraform, so changes are **not visible** to Terraform. |
-| 12 | SSH keys for remote                      | A      | Terraform connects using **SSH private keys** to access remote machines. |
-| 13 | Windows instance remote provisioner      | C      | **WinRM** is used instead of SSH for Windows provisioning. |
-| 14 | Taint behavior                           | A      | Tainted resources are **destroyed and recreated**. |
-| 15 | Cleanup after creation                   | C      | Use a provisioner to perform **cleanup tasks**, like deleting temp files. |
-| 16 | Outputting text locally                  | A      | You can use `local-exec` with `echo` to **print to the local terminal**. |
-| 17 | Unsupported retry mechanism              | B      | `local-exec` doesn't support `on_failure` or `retry_*`. That's only for `remote-exec`. |
-| 18 | local-exec in a module                   | A      | Provisioners **can** be used in modules, but it's discouraged. |
-| 19 | Invalid provisioner field                | C      | `script_file` is **not a valid field**; use `script` or `inline`. |
-| 20 | Remote command best practice             | B      | Use `inline` for short commands, and `script` for **longer, reusable scripts**. |
-| 21 | Order of execution                       | A      | `create` happens after resource creation; `destroy` before resource deletion. |
-| 22 | local-exec runs even if unchanged?       | B      | `local-exec` **always runs** on apply, regardless of resource changes. |
-| 23 | remote-exec use case                     | C      | Installing software like **Nginx** on an EC2 instance is a classic use case. |
-| 24 | Provisioners & configuration drift       | B      | Provisioners can cause **drift** because Terraform can’t track their changes. |
-| 25 | Prevent provisioner on destroy           | A      | Use `when = "create"` to **run only on creation**, not destruction. |
-| 26 | Which runs after destroy                 | D      | `when = "destroy"` lets you run logic **before the resource is deleted**. |
-| 27 | Set env vars in local exec               | C      | Use `environment` block to pass **environment variables** to the local script. |
-| 28 | remote-exec + Ansible                    | B      | You can **invoke Ansible** with remote-exec if Terraform alone can’t configure everything. |
-| 29 | Provisioners best used for               | D      | Use them for **initialization/configuration tasks** not handled natively. |
-| 30 | Using provisioners in production         | C      | It’s **discouraged** in production, as it breaks declarative best practices. |
+Nice set of questions — most of them look spot-on, but your answer key from 11 onward seems **misaligned** with the actual questions listed (e.g., question 12 talks about copying a script, but your answer refers to SSH keys). I’ll go through **all 30 questions** and give you the correct answers with concise justifications.
+
+---
+
+### ✅ Answer Key with Explanations
+
+| #  | Question Summary                                 | Correct Answer | ✅ Explanation |
+|----|--------------------------------------------------|----------------|----------------|
+| 1  | Purpose of provisioners                         | B              | They run scripts or commands after resource creation. |
+| 2  | When to use provisioners                        | B              | Only as a last resort when Terraform can't handle it declaratively. |
+| 3  | Provisioner fails with non-zero code            | B              | Resource becomes tainted and will be recreated on next apply. |
+| 4  | Executes on local machine                       | B              | `local-exec` runs on the machine where Terraform is executed. |
+| 5  | Executes on remote machine                      | C              | `remote-exec` runs commands on the remote instance. |
+| 6  | Needed for remote-exec                          | C              | A `connection` block with SSH or WinRM info is needed. |
+| 7  | SSH connection block                            | B              | The `connection` block handles SSH/WinRM info. |
+| 8  | Purpose of `inline`                             | B              | It contains a list of remote commands. |
+| 9  | Run shell script with `local-exec`              | C              | `command = "bash ./myscript.sh"` runs a shell script. |
+| 10 | Invalid provisioner                             | D              | `state-exec` is not a valid provisioner. |
+| 11 | Why provisioners are a last resort              | C              | Terraform can't track changes they make. |
+| 12 | Copy file to remote server                      | C              | `file` provisioner is used to copy files. |
+| 13 | `on_failure = continue` behavior                | C              | Terraform continues with rest of config even if provisioner fails. |
+| 14 | Avoid failure on provisioner                    | B              | Use `on_failure = "continue"` in the provisioner block. |
+| 15 | Meaning of "tainted"                            | B              | Resource will be destroyed and recreated in next apply. |
+| 16 | Install nginx using remote-exec                 | B              | `inline = ["sudo apt update", "sudo apt install -y nginx"]` is correct syntax. |
+| 17 | When to use `local-exec`                        | C              | To run local shell scripts or commands after resource creation. |
+| 18 | Debug failed `local-exec`                       | C              | Terraform logs (especially with `TF_LOG`) show provisioner output. |
+| 19 | Run Ansible locally after provisioning          | C              | Use `local-exec` to call `ansible-playbook`. |
+| 20 | Mandatory key for SSH connection                | A              | `host` is required in the `connection` block to connect. |
+| 21 | Can provisioners be used in modules?            | B              | Yes, but it's not recommended as it breaks the declarative model. |
+| 22 | Safer alternative to provisioners               | C              | Pre-bake images using Packer to avoid provisioners. |
+| 23 | Required block for remote-exec                  | C              | `connection` block is required to connect. |
+| 24 | Provisioner in destroyed resource               | B              | If `when = destroy`, it **will** execute before destruction. |
+| 25 | Trigger external services with local-exec       | B              | You can use `curl` or similar tools via `local-exec`. |
+| 26 | Use `file` provisioner                          | B              | Correct syntax: `source` and `destination`. |
+| 27 | Max provisioners per resource                   | C              | You can define **multiple provisioners** per resource. |
+| 28 | Supports `interpreter` argument                 | C              | `local-exec` supports setting a custom interpreter (e.g., PowerShell, Python). |
+| 29 | What happens if remote-exec fails               | A              | The `terraform apply` fails and marks the resource as tainted. |
+| 30 | View provisioner logs                           | D              | Set `TF_LOG=DEBUG` to see detailed logs of provisioner execution. |
