--- a/06.01-Modules.MD
+++ b/06.01-Modules.MD
@@ -1,8 +1,10 @@
 ### 🧱 What is a Terraform Module?
+
 A **module** is a self-contained, reusable collection of Terraform configuration files. Modules group **multiple resources** together to represent a logical component (e.g., a VPC, EC2 instance, or Kubernetes cluster).  
 
 - **Root module**: The root directory of your Terraform project (where you run `terraform init` and `terraform apply`) is the root module.
 - **Child module**: Any module that is called from another module using a `module` block.
+- **Nested modules**: A module can call other child modules internally, forming a tree of reusable infrastructure logic.
 
 ---
 
@@ -27,6 +29,14 @@ Modules can be sourced from:
 | **Git Repo**        | `source = "git::https://github.com/user/repo.git"` |
 | **Generic Archive** | `source = "github.com/foo/bar//subdir"`            |
 
+> ✅ **Tip**: When using registry modules, pin a specific version for stability using the `version` argument:
+```hcl
+module "vpc" {
+  source  = "terraform-aws-modules/vpc/aws"
+  version = "~> 3.0"
+}
+```
+
 ---
 
 ### 🔗 Declaring a Module
@@ -48,7 +58,7 @@ module "vpc" {
 
 Modules accept input variables just like Terraform root configurations. Define them in the child module using `variable` blocks.
 
-**Child Module (./modules/network/variables.tf):**
+**Child Module (`./modules/network/variables.tf`):**
 ```hcl
 variable "vpc_cidr" {
   type        = string
@@ -64,13 +74,24 @@ module "network" {
 }
 ```
 
+> 🔒 **Validation**: You can add input validation inside modules for safer reuse:
+```hcl
+variable "vpc_cidr" {
+  type = string
+  validation {
+    condition     = can(cidrhost(var.vpc_cidr, 0))
+    error_message = "Must be a valid CIDR block."
+  }
+}
+```
+
 ---
 
 ### 📦 Module Outputs
 
 You can expose values from a module using `output` blocks, allowing the calling/root module to reference them.
 
-**Inside module (outputs.tf):**
+**Inside module (`outputs.tf`):**
 ```hcl
 output "vpc_id" {
   value = aws_vpc.main.id
@@ -105,6 +126,56 @@ module "instance" {
 }
 ```
 
+**Example with `providers`:**
+```hcl
+provider "aws" {
+  alias  = "us_east"
+  region = "us-east-1"
+}
+
+module "bucket" {
+  source    = "./modules/s3"
+  providers = {
+    aws = aws.us_east
+  }
+}
+```
+
+---
+
+### 📂 Module Folder Structure
+
+Organize each module in its own folder:
+
+```
+modules/
+  └── vpc/
+      ├── main.tf
+      ├── variables.tf
+      ├── outputs.tf
+```
+
+> 📦 Keeping each module in a self-contained folder improves reusability and clarity.
+
+---
+
+### 🔄 Lifecycle of a Module
+
+1. **Define module** (in a local folder or repo).
+2. **Call module** from root module using `module` block.
+3. **Pass inputs** via named arguments.
+4. **Access outputs** with `module.<module_name>.<output_name>`.
+5. **Re-use** module across projects/environments.
+6. **Version** modules when using shared or registry modules.
+
+---
+
+### 🧠 When *Not* to Use Modules
+
+- For very simple resources (e.g., one S3 bucket), writing it inline may be more readable.
+- When you’re prototyping and modules may introduce unnecessary abstraction early on.
+- Avoid overengineering — use modules when there's a clear benefit in reusability, clarity, or isolation.
+
 ---
 
 ### ✅ Best Practices for Modules
@@ -114,6 +185,8 @@ module "instance" {
 - Avoid hardcoding values inside modules; use variables.
 - Store reusable modules in a centralized Git repository or private registry.
 - Pin module versions when using public modules for stability.
+- Validate inputs and document modules well.
+- Use `README.md` in each module folder with examples.
 
 ---
 
@@ -126,13 +199,3 @@ module "instance" {
 | `eks_cluster`     | Setup Kubernetes using Amazon EKS       |
 | `rds_instance`    | Launch an RDS database                  |
 | `s3_bucket`       | Create and configure S3 buckets         |
-
----
-
-### 🔄 Lifecycle of a Module
-
-1. **Define module** (in a local folder or repo).
-2. **Call module** from root module using `module` block.
-3. **Pass inputs** via named arguments.
-4. **Access outputs** with `module.<module_name>.<output_name>`.
-5. **Re-use** module across projects/environments.
