--- a/06.02-Modules-Exam.MD
+++ b/06.02-Modules-Exam.MD
@@ -1,213 +1,213 @@
 ### 🔹 Basics of Modules
 
-1. What is a Terraform module?
-   A) A command used to manage remote resources  
-   B) A container for multiple resources used together  
-   C) A feature for output validation  
-   D) A remote backend for state files  
+1. **What is a Terraform module?**  
+&emsp;A) A command used to manage remote resources  
+&emsp;B) A container for multiple resources used together  
+&emsp;C) A feature for output validation  
+&emsp;D) A remote backend for state files  
 
-2. What is the root module in Terraform?
-   A) A module from the registry  
-   B) A reusable module  
-   C) The main configuration in your working directory  
-   D) The default provider  
+2. **What is the root module in Terraform?**  
+&emsp;A) A module from the registry  
+&emsp;B) A reusable module  
+&emsp;C) The main configuration in your working directory  
+&emsp;D) The default provider  
 
-3. How do you source a module from the local filesystem?
-   A) `source = "./"`  
-   B) `source = "local"`  
-   C) `source = "./path/to/module"`  
-   D) `source = "file://module"`  
+3. **How do you source a module from the local filesystem?**  
+&emsp;A) `source = "./"`  
+&emsp;B) `source = "local"`  
+&emsp;C) `source = "./path/to/module"`  
+&emsp;D) `source = "file://module"`  
 
-4. What is the correct keyword to reference a module in your configuration?
-   A) `resource`  
-   B) `provider`  
-   C) `module`  
-   D) `data`  
+4. **What is the correct keyword to reference a module in your configuration?**  
+&emsp;A) `resource`  
+&emsp;B) `provider`  
+&emsp;C) `module`  
+&emsp;D) `data`  
 
-5. Which of the following is **not** a valid module source?
-   A) Terraform Registry  
-   B) GitHub  
-   C) Local path  
-   D) Terraform Cloud Console  
+5. **Which of the following is _not_ a valid module source?**  
+&emsp;A) Terraform Registry  
+&emsp;B) GitHub  
+&emsp;C) Local path  
+&emsp;D) Terraform Cloud Console  
 
 ---
 
 ### 🔹 Module Inputs
 
-6. How do modules accept parameters?
-   A) Using `locals`  
-   B) Using `var.input`  
-   C) Using `variable` blocks  
-   D) Using `data` sources  
+6. **How do modules accept parameters?**  
+&emsp;A) Using `locals`  
+&emsp;B) Using `var.input`  
+&emsp;C) Using `variable` blocks  
+&emsp;D) Using `data` sources  
 
-7. What is required to pass a value into a module?
-   A) `locals` block  
-   B) Input parameters inside the `module` block  
-   C) A `provider` block  
-   D) An `output` block  
+7. **What is required to pass a value into a module?**  
+&emsp;A) `locals` block  
+&emsp;B) Input parameters inside the `module` block  
+&emsp;C) A `provider` block  
+&emsp;D) An `output` block  
 
-8. In a module, where do you define default values for inputs?
-   A) `locals.tf`  
-   B) Inside `output` blocks  
-   C) Inside `variable` blocks  
-   D) You can’t set defaults in modules  
+8. **In a module, where do you define default values for inputs?**  
+&emsp;A) `locals.tf`  
+&emsp;B) Inside `output` blocks  
+&emsp;C) Inside `variable` blocks  
+&emsp;D) You can’t set defaults in modules  
 
-9. Which of the following is the correct way to assign a string input to a module?
-   A) `vpc_name: my-vpc`  
-   B) `vpc_name = "my-vpc"`  
-   C) `set vpc_name = my-vpc`  
-   D) `input.vpc_name = "my-vpc"`  
+9. **Which of the following is the correct way to assign a string input to a module?**  
+&emsp;A) `vpc_name: my-vpc`  
+&emsp;B) `vpc_name = "my-vpc"`  
+&emsp;C) `set vpc_name = my-vpc`  
+&emsp;D) `input.vpc_name = "my-vpc"`  
 
-10. How are input variables referenced **inside** the module?
-   A) `var.<name>`  
-   B) `input.<name>`  
-   C) `module.<name>`  
-   D) `output.<name>`  
+10. **How are input variables referenced _inside_ the module?**  
+&emsp;A) `var.<name>`  
+&emsp;B) `input.<name>`  
+&emsp;C) `module.<name>`  
+&emsp;D) `output.<name>`  
 
 ---
 
 ### 🔹 Module Outputs
 
-11. What is the purpose of `output` blocks inside a module?
-   A) To write logs  
-   B) To return values from a module  
-   C) To update state files  
-   D) To expose provider settings  
+11. **What is the purpose of `output` blocks inside a module?**  
+&emsp;A) To write logs  
+&emsp;B) To return values from a module  
+&emsp;C) To update state files  
+&emsp;D) To expose provider settings  
 
-12. How do you reference a module's output from the root module?
-   A) `var.<output>`  
-   B) `output.<module>.<name>`  
-   C) `module.<module_name>.<output_name>`  
-   D) `module.<output_name>`  
+12. **How do you reference a module's output from the root module?**  
+&emsp;A) `var.<output>`  
+&emsp;B) `output.<module>.<name>`  
+&emsp;C) `module.<module_name>.<output_name>`  
+&emsp;D) `module.<output_name>`  
 
-13. What happens if you don’t declare outputs inside a module?
-   A) You can't pass inputs  
-   B) The module fails to run  
-   C) You cannot access any results from the module  
-   D) Outputs are generated automatically  
+13. **What happens if you don’t declare outputs inside a module?**  
+&emsp;A) You can't pass inputs  
+&emsp;B) The module fails to run  
+&emsp;C) You cannot access any results from the module  
+&emsp;D) Outputs are generated automatically  
 
-14. Where do you typically define the output values from a module?
-   A) In the `.tfvars` file  
-   B) In the child module's `outputs.tf`  
-   C) Inside the provider block  
-   D) Inside the Terraform backend  
+14. **Where do you typically define the output values from a module?**  
+&emsp;A) In the `.tfvars` file  
+&emsp;B) In the child module's `outputs.tf`  
+&emsp;C) Inside the provider block  
+&emsp;D) Inside the Terraform backend  
 
-15. What is a use case for module outputs?
-   A) Declare resource lifecycle  
-   B) Configure provisioners  
-   C) Pass values between modules  
-   D) Configure backend encryption  
+15. **What is a use case for module outputs?**  
+&emsp;A) Declare resource lifecycle  
+&emsp;B) Configure provisioners  
+&emsp;C) Pass values between modules  
+&emsp;D) Configure backend encryption  
 
 ---
 
 ### 🔹 Meta-Arguments
 
-16. What does the `count` argument do in a module block?
-   A) Counts the number of output variables  
-   B) Creates multiple instances of the module  
-   C) Defines the max number of resources in the module  
-   D) It is used for conditional logic  
+16. **What does the `count` argument do in a module block?**  
+&emsp;A) Counts the number of output variables  
+&emsp;B) Creates multiple instances of the module  
+&emsp;C) Defines the max number of resources in the module  
+&emsp;D) It is used for conditional logic  
 
-17. When should you use `for_each` instead of `count`?
-   A) When you need multiple copies with different parameters  
-   B) When using a list of identical inputs  
-   C) When defining lifecycle policies  
-   D) When overriding provider credentials  
+17. **When should you use `for_each` instead of `count`?**  
+&emsp;A) When you need multiple copies with different parameters  
+&emsp;B) When using a list of identical inputs  
+&emsp;C) When defining lifecycle policies  
+&emsp;D) When overriding provider credentials  
 
-18. What does `depends_on` do in a module?
-   A) Declares required provider versions  
-   B) Ensures a specific order of operations  
-   C) Declares module version  
-   D) Declares output dependencies  
+18. **What does `depends_on` do in a module?**  
+&emsp;A) Declares required provider versions  
+&emsp;B) Ensures a specific order of operations  
+&emsp;C) Declares module version  
+&emsp;D) Declares output dependencies  
 
-19. How do you pass a custom provider to a module?
-   A) With the `providers` meta-argument  
-   B) Inside the `backend` block  
-   C) Using `depends_on`  
-   D) With `provider_override`  
+19. **How do you pass a custom provider to a module?**  
+&emsp;A) With the `providers` meta-argument  
+&emsp;B) Inside the `backend` block  
+&emsp;C) Using `depends_on`  
+&emsp;D) With `provider_override`  
 
-20. What happens if a module fails during creation due to a provisioner?
-   A) The state file is removed  
-   B) Terraform retries indefinitely  
-   C) The resource is marked as tainted  
-   D) Terraform exits without any action  
+20. **What happens if a module fails during creation due to a provisioner?**  
+&emsp;A) The state file is removed  
+&emsp;B) Terraform retries indefinitely  
+&emsp;C) The resource is marked as tainted  
+&emsp;D) Terraform exits without any action  
 
 ---
 
 ### 🔹 Advanced Use and Best Practices
 
-21. How can modules be versioned when sourced from the Terraform Registry?
-   A) Using the `version` argument  
-   B) Using `terraform_version` inside the module  
-   C) They cannot be versioned  
-   D) Using the `backend` block  
+21. **How can modules be versioned when sourced from the Terraform Registry?**  
+&emsp;A) Using the `version` argument  
+&emsp;B) Using `terraform_version` inside the module  
+&emsp;C) They cannot be versioned  
+&emsp;D) Using the `backend` block  
 
-22. Which of the following is a good practice for modules?
-   A) Hardcode all values inside the module  
-   B) Do not use variables or outputs  
-   C) Keep modules small and single-purpose  
-   D) Avoid using modules for production  
+22. **Which of the following is a good practice for modules?**  
+&emsp;A) Hardcode all values inside the module  
+&emsp;B) Do not use variables or outputs  
+&emsp;C) Keep modules small and single-purpose  
+&emsp;D) Avoid using modules for production  
 
-23. How can you organize modules in a repo?
-   A) One module per `.tf` file  
-   B) Nest them in the `.terraform` directory  
-   C) Place each module in its own folder under `/modules`  
-   D) All modules must be defined inline  
+23. **How can you organize modules in a repo?**  
+&emsp;A) One module per `.tf` file  
+&emsp;B) Nest them in the `.terraform` directory  
+&emsp;C) Place each module in its own folder under `/modules`  
+&emsp;D) All modules must be defined inline  
 
-24. What is the advantage of using child modules?
-   A) They simplify managing large configurations  
-   B) They reduce code readability  
-   C) They force re-creation of resources  
-   D) They store Terraform state  
+24. **What is the advantage of using child modules?**  
+&emsp;A) They simplify managing large configurations  
+&emsp;B) They reduce code readability  
+&emsp;C) They force re-creation of resources  
+&emsp;D) They store Terraform state  
 
-25. Can modules include other modules?
-   A) No  
-   B) Yes, using nested `module` blocks  
-   C) Only with a local backend  
-   D) Only using registry modules  
+25. **Can modules include other modules?**  
+&emsp;A) No  
+&emsp;B) Yes, using nested `module` blocks  
+&emsp;C) Only with a local backend  
+&emsp;D) Only using registry modules  
 
 ---
 
 ### 🔹 Real-World Scenarios
 
-26. You want to reuse a VPC module in 3 different regions. What should you use?
-   A) `for_each`  
-   B) `count`  
-   C) Separate Terraform workspaces  
-   D) Remote state  
+26. **You want to reuse a VPC module in 3 different regions. What should you use?**  
+&emsp;A) `for_each`  
+&emsp;B) `count`  
+&emsp;C) Separate Terraform workspaces  
+&emsp;D) Remote state  
 
-27. Which block exposes values like `vpc_id` or `subnet_ids` to the root module?
-   A) variable  
-   B) locals  
-   C) provider  
-   D) output  
+27. **Which block exposes values like `vpc_id` or `subnet_ids` to the root module?**  
+&emsp;A) variable  
+&emsp;B) locals  
+&emsp;C) provider  
+&emsp;D) output  
 
-28. If a module has an output like `output "id" { value = aws_instance.example.id }`, how would you access it in the root?
-   A) `module.id`  
-   B) `output.id`  
-   C) `module.<module_name>.id`  
-   D) `var.id`  
+28. **If a module has an output like `output "id" { value = aws_instance.example.id }`, how would you access it in the root?**  
+&emsp;A) `module.id`  
+&emsp;B) `output.id`  
+&emsp;C) `module.<module_name>.id`  
+&emsp;D) `var.id`  
 
-29. You want to create a reusable module for EC2 with instance type as input. What do you use?
-   A) `locals`  
-   B) `provider`  
-   C) `variable "instance_type"`  
-   D) `output "instance_type"`  
+29. **You want to create a reusable module for EC2 with instance type as input. What do you use?**  
+&emsp;A) `locals`  
+&emsp;B) `provider`  
+&emsp;C) `variable "instance_type"`  
+&emsp;D) `output "instance_type"`  
 
-30. What does the following block represent?
+30. **What does the following block represent?**
 
-```hcl
-module "vpc" {
-  source = "terraform-aws-modules/vpc/aws"
-  name   = "my-vpc"
-  cidr   = "10.0.0.0/16"
-}
-```
+   ```hcl
+   module "vpc" {
+     source = "terraform-aws-modules/vpc/aws"
+     name   = "my-vpc"
+     cidr   = "10.0.0.0/16"
+   }
+   ```
 
-A) Resource definition  
-B) Calling a remote VPC module from the registry  
-C) Output block for a module  
-D) Declaring a local variable  
+&emsp;A) Resource definition  
+&emsp;B) Calling a remote VPC module from the registry  
+&emsp;C) Output block for a module  
+&emsp;D) Declaring a local variable
 
 ---
 
