--- a/07.01-Builtin-Functions-and-Type-Constraints.MD
+++ b/07.01-Builtin-Functions-and-Type-Constraints.MD
@@ -34,6 +34,20 @@ function_name(arg1, arg2, ...)
 | `upper(string)` | Converts string to uppercase. | `upper("hello")` → `"HELLO"` |
 | `replace(string, old, new)` | Replaces substrings. | `replace("foo-bar", "-", "_")` → `"foo_bar"` |
 | `format(format, args…)` | Formats a string. | `format("Hello, %s!", "world")` → `"Hello, world!"` |
+| `compact(list)` | Removes all nulls from list. | `compact(["a", null, "b"])` → `["a", "b"]` |
+
+---
+
+### 📚 Map & Collection Utilities
+
+| Function | Description | Example |
+|----------|-------------|---------|
+| `lookup(map, key, default)` | Gets key or returns default. | `lookup({a="x"}, "b", "y")` → `"y"` |
+| `contains(list, value)` | Checks if list contains a value. | `contains(["a", "b"], "a")` → `true` |
+| `merge(map1, map2)` | Merges maps; later keys win. | `merge({a=1}, {a=2, b=3})` → `{a=2, b=3}` |
+| `zipmap(keys, values)` | Builds a map from two lists. | `zipmap(["a","b"], [1,2])` → `{a=1, b=2}` |
+| `keys(map)` | Gets list of map keys. | `keys({a=1, b=2})` → `["a", "b"]` |
+| `values(map)` | Gets list of map values. | `values({a=1, b=2})` → `[1, 2]` |
 
 ---
 
@@ -43,6 +57,43 @@ function_name(arg1, arg2, ...)
 |----------|-------------|---------|
 | `jsonencode(value)` | Encodes Terraform value as JSON. | `jsonencode({name = "test"})` → `'{"name":"test"}'` |
 | `jsondecode(string)` | Parses JSON string to value. | `jsondecode("{\"name\":\"test\"}")["name"]` → `"test"` |
+
+---
+
+### 🔄 Conditional & Error Handling
+
+| Function | Description | Example |
+|----------|-------------|---------|
+| `try(x, y, …)` | Returns first valid result. | `try(1/0, "fallback")` → `"fallback"` |
+| `can(expr)` | Returns true if expression is valid. | `can(1/0)` → `false` |
+| `coalesce(x, y, …)` | First non-null/empty value. | `coalesce(null, "", "foo")` → `""` |
+
+**Conditional Syntax:**
+```hcl
+value = var.env == "prod" ? "yes" : "no"
+```
+
+---
+
+### 🔁 Dynamic Expressions (`for`)
+
+#### List Comprehension:
+```hcl
+output "upper_names" {
+  value = [for name in ["alice", "bob"] : upper(name)]
+}
+```
+**→** `["ALICE", "BOB"]`
+
+#### Map Comprehension:
+```hcl
+output "tag_map" {
+  value = {
+    for k in ["Name", "Env"] : k => "default-${k}"
+  }
+}
+```
+**→** `{ Name = "default-Name", Env = "default-Env" }`
 
 ---
 
@@ -170,3 +221,41 @@ output "tuple_example" {
 }
 ```
 **Output:** `3`
+
+---
+
+### Example: Merge Tags and Use Defaults
+```hcl
+variable "default_tags" {
+  default = {
+    team = "devops"
+    env  = "staging"
+  }
+}
+
+variable "extra_tags" {
+  default = {
+    project = "terraform"
+    env     = "prod"
+  }
+}
+
+output "merged_tags" {
+  value = merge(var.default_tags, var.extra_tags)
+}
+```
+**Output:** `{ team = "devops", env = "prod", project = "terraform" }`
+
+---
+
+### 🧠 Summary of Function Categories
+
+| Category      | Examples |
+|---------------|----------|
+| Numeric       | `abs`, `ceil`, `floor`, `min`, `max` |
+| String        | `join`, `split`, `upper`, `lower`, `replace`, `format` |
+| Collections   | `concat`, `length`, `merge`, `contains`, `lookup`, `zipmap`, `keys`, `values`, `compact` |
+| JSON          | `jsonencode`, `jsondecode` |
+| Logic/Error   | `try`, `can`, `coalesce`, ternary `? :` |
+| Dynamic       | `for` expressions (comprehensions) |
+| Types         | `type`, `toset`, `tolist`, `tomap`, `tostring` |
